Added Navigation Graph class. Added Login and Registration Screen with its functionalities. Connected app to Firebase. Anabled auth and db features via Firebase. In future the differentiation of kid/parent accounts needs to be mplemented.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">learn_how_to_code</string>
+    <string name="app_name">Turtle Trail</string>
     <string name="title_activity_login">Login</string>
 </resources>
