--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Turtle Trail</string>
     <string name="title_activity_login">Login</string>
+    <string name="right_arrow">Right Arrow</string>
 </resources>
